# mlops

./: data_exploration.ipynb  pyproject.toml
.dvc/: config
dvcfiles/: trained_model.dvc
logs/cola/version_1/: events.out.tfevents.1634711634.L-FRE-392358.13990.0  events.out.tfevents.1634713906.L-FRE-392358.20127.0
models/: .gitignore  best-checkpoint.ckpt.ckpt.dvc
multirun/2021-10-20/11-23-57/: multirun.yaml
w0/: data.py
w1/: train.py
w2/: train.py
wandb/: latest-run
wandb/run-20211020_091331-106j51su/: run-106j51su.wandb
wandb/run-20211020_091331-106j51su/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20211020_093258-2ls5x58l/: run-2ls5x58l.wandb
wandb/run-20211020_093258-2ls5x58l/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20211020_093503-2hkeern9/: run-2hkeern9.wandb
wandb/run-20211020_093503-2hkeern9/files/: config.yaml  wandb-metadata.json
wandb/run-20211020_104247-g2phpztr/: run-g2phpztr.wandb
wandb/run-20211020_104247-g2phpztr/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20211020_104341-o5cj8wvu/: run-o5cj8wvu.wandb
wandb/run-20211020_104341-o5cj8wvu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20211020_104500-2hoc80ql/: run-2hoc80ql.wandb
wandb/run-20211020_104500-2hoc80ql/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20211020_112137-2ptznipa/: run-2ptznipa.wandb
wandb/run-20211020_112137-2ptznipa/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+23 files in other folders)
