[tool.poetry]
name = "mlops_basics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "1.2.10"
datasets="1.6.2"
transformers="4.5.1"
scikit-learn="0.24.2"
ipykernel = "^6.4.1"
IProgress = "^0.4"
ipywidgets = "^7.6.5"
wandb = "^0.12.5"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
hydra-core = "1.1.0"
hydra-colorlog = "^1.1.0"
bcrypt = "^3.2.0"
dvc = {extras = ["all"], version = "^2.8.1"}
PyDrive2 = "^1.10.0"





[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
